--- a/deploy/helm/sumologic/templates/metrics/common/hpa.yaml
+++ b/deploy/helm/sumologic/templates/metrics/common/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if eq (include "metrics.otelcol.enabled" .) "true" }}
+{{- if and (eq (include "metrics.otelcol.enabled" .) "true") ( .Values.metrics.autoscaling.enabled) }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
