fix(helm): revert autoscalling option for fluent hpa
Signed-off-by: Dominik Rosiek <drosiek@sumologic.com>

--- a/deploy/helm/sumologic/templates/metrics/fluentd/hpa.yaml
+++ b/deploy/helm/sumologic/templates/metrics/fluentd/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if eq (include "metrics.fluentd.enabled" .) "true" }}
+{{- if and (eq (include "metrics.fluentd.enabled" .) "true") ( .Values.fluentd.metrics.autoscaling.enabled) }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
